# shop_backend

./: Dockerfile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pre-commit-config.yaml  pyproject.toml
app/: events.py  main.py
app/db/: db_session.py  seed.py
app/graphql/: mutation.py  query.py  schema.py  subscription.py
app/migrations/: env.py
app/migrations/versions/: 04a3e2e0023d_now_with_enum_orderstatus.py  44c60cdfb9cb_now_orders_has_price.py  46c55a98cd70_notifications_with_enum.py  4ebf5678e5b2_now_user_has_a_telegram_handler.py  7e865d9d4c19_now_cartitems_has_price.py  986cc21a62c1_update_cartitem_model.py  c8dcfcbe8d72_init.py  ca2e298622c6_init.py  d787900a1f02_products_to_product.py  f8cde1405912_init.py
app/models/: base.py  cart.py  notifications.py  order.py  product.py  sessions.py  user.py
app/services/: auth_service.py  cart_service.py  notification_service.py  order_service.py  product_service.py  session_service.py
app/settings/: .env  .env.example  config.py
tests/: conftest.py  test_graphql_flow.py
