[project]
name = "Disk_shop"
version = "0.1.0"
description = "Backend for game disc store"
authors = [
    {name = "SailorLekalo", email = "shamshev-andrei@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "strawberry-graphql[fastapi]>=0.212.1",
    "sqlalchemy[asyncio]>=2.0.23",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.23.2",
    "python-multipart>=0.0.6",
    "pydantic-settings>=2.0.3",
    "psycopg (>=3.2.9,<4.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "aiogram (>=3.22.0,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
migrate = "alembic upgrade head"
makemigrations = "alembic revision --autogenerate -m"

[tool.alembic]
script_location = "app/migrations"
sqlalchemy.url = "postgresql+asyncpg://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:5432/${DB_NAME}"

[project.optional-dependencies]
dev = [
    "ipython>=8.17.2",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0"
]